Fixed color contrast in main menu, added focus pseudo class on links on home page.

--- a/site/styles/content.less
+++ b/site/styles/content.less
@@ -165,7 +165,8 @@ nav#other {
 		&.calendar {
 			background-image: url(../images/calendar.png);
 			&:hover,
-			&:active {
+			&:active,
+			&:focus {
 				transform: scale(1.05);
 				transition: all 0.3s;
 			}
@@ -174,7 +175,8 @@ nav#other {
 			background-image: url(../images/location.png);
 			margin-left: 2rem;
 			&:hover,
-			&:active {
+			&:active,
+			&:focus {
 				transform: scale(1.05);
 				transition: all 0.3s;
 			}
@@ -183,7 +185,8 @@ nav#other {
 		&.career {
 			background-image: url(../images/careers.png);
 			&:hover,
-			&:active {
+			&:active,
+			&:focus {
 				transform: scale(1.05);
 				transition: all 0.3s;
 			}
