--- a/site/styles/header.less
+++ b/site/styles/header.less
@@ -148,7 +148,7 @@ header {
 					color: @color_program;
 
 					&:hover {
-						background-color: darken(@color_program, 20%);
+						background-color: darken(@color_program, 30%);
 						color: @color_bright;
 						transition: all 0.3s;
 					}
@@ -177,13 +177,13 @@ header {
 				// allow highlight only on links with href
 				&.contact:hover {
 					color: @color_bright;
-					background-color: darken(@color_contact, 20);
+					background-color: darken(@color_contact, 40);
 					transition: all 0.3s;
 				}
 
 				// custom inner menu highliths
 				&.program + nav a:hover {
-					background-color: darken(@color_program, 20);
+					background-color: darken(@color_program, 30);
 					transition: all 0.3s;
 				}
 
